# jetti

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml  lets.kdl  mise.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  commands.md  configuration.md  getting-started.md  shell-integration.md
docs/src/commands/: clone.md  completions.md  config.md  fetch.md  list.md  rm.md  root.md  status.md  update.md
src/: cli.rs  config.rs  error.rs  main.rs  repo.rs  tree.rs
src/cmd/: batch.rs  config.rs  get.rs  list.rs  mod.rs  rm.rs  sync.rs
tests/: integration.rs
